fixes hv-nav overflow issue

--- a/css/hv-parts.css
+++ b/css/hv-parts.css
@@ -398,6 +398,11 @@ HDS Global Header and Navigation
       display: none;
    }
 
+   .spotlightNavigation,
+   .mm-spotlightNavigation{
+      margin: 0 !important;
+   }
+
 
 }
 
